<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:background="?android:attr/colorBackground">

    <TextView
        android:id="@+id/sheetPatientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="Patient Name" />

    <TextView
        android:id="@+id/actionViewPatient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawableStart="@drawable/ic_visibility"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/caretaker_open_patient_view"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/actionExportData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawableStart="@drawable/ic_file_download"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/caretaker_export_patient"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/actionImportData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawableStart="@drawable/ic_file_upload"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/caretaker_import_patient"
        android:textSize="16sp" />

</LinearLayout>
